--- a/index.html
+++ b/index.html
@@ -52,11 +52,21 @@
 
     <!-- ここから# -->
     <main>
+      <!-- <div class="innerImg"> -->
       <div class="thum_box" style="background-image: url(img/mainbg.png);">
         <!-- <div class="innerImg"> -->
+        <div class="test1">
+
+          <div class="textArea">
+            <h1>セカイを変えるチーズを作ろう</h1>
+            <h2>チーズ職人養成学校「チーズアカデミーTOKYO」</h2>
+          </div>
+        </div>
 
         <!-- </div> -->
       </div>
+      <!-- </div> -->
+
 
       <div class="containts_wrapper">
 
@@ -67,6 +77,8 @@
             <h1>ABOUT</h1>
             <h2>チーズアカデミーは、チーズ職人養成学校です。</h2>
           </div>
+
+
           <!--  responsive-->
           <div id="About" class="About">
 
